@@ -13,10 +13,10 @@ SceneView uses **native renderers per platform** for the best performance and to
 
 | Platform | Renderer | Framework | Module | Status |
 |---|---|---|---|---|
-| **Android** | Filament | Jetpack Compose | `sceneview` / `arsceneview` | Stable (v4.0.0) |
-| **iOS** | RealityKit | SwiftUI | `SceneViewSwift` | Alpha (v4.0.0) |
-| **macOS** | RealityKit | SwiftUI | `SceneViewSwift` | Alpha (v4.0.0) |
-| **visionOS** | RealityKit | SwiftUI | `SceneViewSwift` | Alpha (v4.0.0) |
+| **Android** | Filament | Jetpack Compose | `sceneview` / `arsceneview` | Stable (v4.39.0) |
+| **iOS** | RealityKit | SwiftUI | `SceneViewSwift` | Alpha (v4.39.0) |
+| **macOS** | RealityKit | SwiftUI | `SceneViewSwift` | Alpha (v4.39.0) |
+| **visionOS** | RealityKit | SwiftUI | `SceneViewSwift` | Alpha (v4.39.0) |
 | **Web** | Filament.js (WASM) | Kotlin/JS | `sceneview-web` | Alpha |
 | **Desktop** | Filament via `SceneViewer` (filament-kmp) | Compose Desktop | `samples/desktop-demo` | Alpha (JDK 22+) |
 | **Android TV** | Filament | Compose TV | `sceneview` | Alpha |
@@ -28,9 +28,10 @@ SceneView uses **native renderers per platform** for the best performance and to
     `sceneview-compose` gives you one `SceneViewer` composable from `commonMain` and
     delegates to the renderers above. It covers the **viewer subset** only — a model, an
     orbit camera, a light, an environment, tap hit-testing. **No AR**, no custom
-    materials, no post-processing: those stay platform-native by design. Today Android
-    renders; the iOS and Desktop actuals draw a visible "not available yet" notice.
-    See [Compose Multiplatform](compose-multiplatform.md).
+    materials, no post-processing: those stay platform-native by design. Android and
+    Desktop render through Filament; iOS renders through RealityKit once the app
+    registers the one-time host factory, and draws a visible "not available yet" notice
+    until it does. See [Compose Multiplatform](compose-multiplatform.md).
 
 ---
 
@@ -41,7 +42,7 @@ The primary platform. SceneView wraps Google Filament (PBR rendering) and ARCore
 - **3D**: `SceneView { }` composable with 48+ node types
 - **AR**: `ARSceneView { }` with plane detection, image tracking, face mesh, cloud anchors, geospatial
 - **Min SDK**: 24 (Android 7.0)
-- **Install**: `implementation("io.github.sceneview:sceneview:4.38.0")`
+- **Install**: `implementation("io.github.sceneview:sceneview:4.40.0")`
 
 [:octicons-arrow-right-24: Android Quickstart](quickstart.md)
 
@@ -54,7 +55,7 @@ SceneViewSwift provides a native SwiftUI library powered by RealityKit and ARKit
 - **3D**: `SceneView { }` with ModelNode, GeometryNode, LightNode, and more
 - **AR**: `ARSceneView()` with plane detection and tap-to-place (iOS only)
 - **Min versions**: iOS 18+, macOS 15+, visionOS 2+
-- **Install**: `.package(url: "https://github.com/sceneview/sceneview.git", from: "4.38.0")`
+- **Install**: `.package(url: "https://github.com/sceneview/sceneview.git", from: "4.40.0")`
 
 [:octicons-arrow-right-24: Apple Quickstart](quickstart-ios.md)
 
@@ -73,20 +74,21 @@ SceneView Web uses **Filament.js** -- the same Filament rendering engine as Andr
 
 ---
 
-## Desktop (Placeholder)
+## Desktop (Compose Desktop)
 
-> **Not SceneView.** The desktop demo is a Compose Canvas wireframe renderer -- it does
-> not use SceneView or Filament. It exists as a UI placeholder for a future Filament JNI
-> desktop integration.
+The desktop actual of `sceneview-compose` renders with **Filament**, through the
+community [filament-kmp](https://github.com/Erkko68/filament-kmp) FFM bindings: an
+offscreen render, pipelined `readPixels`, then a Skia image in the Compose tree.
 
-- **Renderer**: Software wireframe (Compose Canvas 2D drawing, not GPU-accelerated)
+- **3D**: `SceneViewer(…)` — the same viewer subset as the other Compose Multiplatform
+  targets (glTF model, orbit camera, light, environment, tap hit-testing). **No AR.**
 - **Framework**: Compose Desktop
-- **Sample**: `samples/desktop-demo/`
-- **Missing**: GPU acceleration, PBR materials, glTF loading, shadows, scene graph
+- **Requirements**: JDK 22+ (FFM), launched with `--enable-native-access=ALL-UNNAMED`
+- **Install**: `implementation("io.github.sceneview:sceneview-compose:4.40.0")`
+- **Sample**: `samples/desktop-demo/` — run it with `./gradlew :samples:desktop-demo:run`
 
-A future version would use Filament JNI for full PBR rendering. This requires building
-Filament from source with JNI enabled (estimated 18-29 days). See
-[Filament Desktop Research](desktop-filament.md) for details.
+[:octicons-arrow-right-24: Compose Multiplatform](compose-multiplatform.md) ·
+[Desktop Filament decision record](desktop-filament.md)
 
 ---
 
@@ -108,7 +110,7 @@ A Flutter plugin that bridges to native SceneView rendering on both Android (Fil
 
 - **Android**: `ComposeView` hosting `SceneView { }` composable
 - **iOS**: `SceneViewerHostView`, the shared `SceneViewSwift` host, for the 3D path; AR keeps its own platform view
-- **Install**: `flutter_sceneview: ^4.24.0` in pubspec.yaml ([pub.dev](https://pub.dev/packages/flutter_sceneview) — the packages named `sceneview` / `sceneview_flutter` are unrelated third-party uploads)
+- **Install**: `flutter_sceneview: ^4.39.0` in pubspec.yaml ([pub.dev](https://pub.dev/packages/flutter_sceneview) — the packages named `sceneview` / `sceneview_flutter` are unrelated third-party uploads)
 
 [:octicons-arrow-right-24: Flutter Quickstart](quickstart-flutter.md)
 
